# ChangeLog for x11-plugins/enigmail
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-plugins/enigmail/ChangeLog,v 1.110 2007/12/15 12:53:00 armin76 Exp $

  15 Dec 2007; Raúl Porcel <armin76@gentoo.org> enigmail-0.94.4.ebuild,
  enigmail-0.95.5-r1.ebuild:
  Minor touchups, use 1.5.0.13 for 0.94.4

  19 Nov 2007; Raúl Porcel <armin76@gentoo.org> -enigmail-0.95.2-r1.ebuild,
  -enigmail-0.95.3.ebuild, -enigmail-0.95.3-r1.ebuild:
  old

  18 Nov 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  enigmail-0.95.5-r1.ebuild:
  ppc stable, bug #196481

  18 Nov 2007; Markus Rothe <corsair@gentoo.org> enigmail-0.95.5-r1.ebuild:
  Stable on ppc64; bug #196481

  16 Nov 2007; Raúl Porcel <armin76@gentoo.org> enigmail-0.95.5-r1.ebuild:
  alpha/ia64/sparc stable wrt security #196481

  15 Nov 2007; Steve Dibb <beandog@gentoo.org> enigmail-0.95.3-r1.ebuild,
  enigmail-0.95.5-r1.ebuild:
  amd64 stable, bug 196481

  15 Nov 2007; Markus Meier <maekke@gentoo.org> enigmail-0.95.5-r1.ebuild:
  x86 stable, security bug #196481

*enigmail-0.95.5-r1 (15 Nov 2007)
*enigmail-0.95.3-r1 (15 Nov 2007)

  15 Nov 2007; Raúl Porcel <armin76@gentoo.org> +enigmail-0.95.3-r1.ebuild,
  -enigmail-0.95.4.ebuild, -enigmail-0.95.5.ebuild,
  +enigmail-0.95.5-r1.ebuild:
  Revision bumps to compile against thunderbird-2.0.0.9

*enigmail-0.95.5 (02 Nov 2007)

  02 Nov 2007; Raúl Porcel <armin76@gentoo.org> +enigmail-0.95.5.ebuild:
  Version bump

*enigmail-0.95.4 (23 Oct 2007)

  23 Oct 2007; Raúl Porcel <armin76@gentoo.org> +enigmail-0.95.4.ebuild:
  Version bump

  16 Oct 2007; Raúl Porcel <armin76@gentoo.org> enigmail-0.95.3.ebuild:
  Fix cc and cxx calls, bug #194240, thanks to Chris Slycord <cslycord at
  gmail dot com> for the fix

  13 Oct 2007; Markus Rothe <corsair@gentoo.org> enigmail-0.95.3.ebuild:
  Stable on ppc64; bug #193542

  25 Sep 2007; Raúl Porcel <armin76@gentoo.org> enigmail-0.95.3.ebuild:
  sparc stable wrt #193542
