@@ -45,6 +45,29 @@ DIST enigmail-0.95.5-tr-TR.xpi 30638 RMD160 44110bbb7b4e30ebfe05e0c798337a7a139f
 DIST enigmail-0.95.5-zh-CN.xpi 31621 RMD160 3adf067c27060706b0b5649b2bd0cda9bbbf3f54 SHA1 657e4353cadf1760438b0b3b956288cb08b93c60 SHA256 f73339e2e9edd9f447b8101885c78b5f19ad7d3f4e52121f0141ecbf63b14412
 DIST enigmail-0.95.5-zh-TW.xpi 31721 RMD160 dfe5c6cc8162fc361c075b8e5c70fced41e3880f SHA1 034f5ac8312e5cbf4b977fa817e4aec93243a9b3 SHA256 d3ee112972b4e7788d34841121fadc0083d5e50fc14ce8e1355b765fa8aaaf42
 DIST enigmail-0.95.5.tar.gz 1189374 RMD160 f8ba29265a1fe31fd2d9197148270d7628b58e61 SHA1 983f04b58524228fca31c7f6a0b0f36a69d72559 SHA256 2d3dc9a14aa4976f919a7b8090b86f8362a51bb2fd69967f0aca3b99dfd254ed
+DIST enigmail-0.95.6-ca-AD.xpi 30605 RMD160 6827573391899f49f03e895b02292dbec0f598cd SHA1 d6d5866521ecf9800f2d7843d22a01a8f9cebd5e SHA256 68c7c716478e2dd9e64dff7bd3b209417665c7dbe12146bc9284880806869721
+DIST enigmail-0.95.6-cs-CZ.xpi 33358 RMD160 30970684d12663138ddde7cb8ee038ca67ebc161 SHA1 6dbfce1d141d3d0157069e61f6afd1811202b582 SHA256 88ef26d77005b5517912edb3aa0fefa49e7145ffc979e6ba13ecc755b48ffc2a
+DIST enigmail-0.95.6-de.xpi 31707 RMD160 45a89393badcb0453984f050b57d5172330b874a SHA1 047f8d425c79d5e9df1585fb9d95c0ee7862cc85 SHA256 16358d6d651640acfbd110b1c3dd8c6f764c90b5bac24d952f99d9eda9c6a9f7
+DIST enigmail-0.95.6-el.xpi 38899 RMD160 c3d90eb73a078a827b1fb180d47e7e3e92de8d50 SHA1 16def878b0c5c3e8fba0194b8a61149f666536ba SHA256 df694f3c2045cb847f1938a483d0c74b223eca80755146cd1dd2aafd67f08327
+DIST enigmail-0.95.6-es-ES.xpi 29637 RMD160 602183e597a6d6924e079c468d93d6e7ee328d40 SHA1 dc16649ab59cd8a88dc24a8e1a85ad65d9b1225d SHA256 8537f7a3ab14b53733e0be89661938a0faff468aa1f1eed14e49f9e7feab25ed
+DIST enigmail-0.95.6-fi-FI.xpi 30081 RMD160 f06aebc55d6d4481c70e0fbba3d7f3c809bea2f9 SHA1 b5b61cc7e6e0104d553ce53185b1e9f5335c7cc0 SHA256 618fd0b74406ff3ac625f99cb3dbca1d4a347b2d36fcb0f3ccf7070387681cb2
+DIST enigmail-0.95.6-fr-FR.xpi 32665 RMD160 d78200280157af1de58ac02981a10b82af34f1ce SHA1 e801eb82ed31a8b6f58f97b3972f4d964cb1e533 SHA256 55ee6357e52ae111b5ad8a0587f34a93c5b97d7f7b1443bccb195e9e8b88d417
+DIST enigmail-0.95.6-hu-HU.xpi 33707 RMD160 2459f373e0a6af92896ea5ae82079e7a0391ef6a SHA1 ac507ffc4f4cd7992fd6651624afbf9368d276f0 SHA256 42aa4c8b3e77f0c211c8b4f83299f57ed1c4132b914acdbc2da74969405884fc
+DIST enigmail-0.95.6-it-IT.xpi 31757 RMD160 936c1747da644bbace844cbf7fe462c6de9d2275 SHA1 6a84ceff3aa556390986bc08526bc973cfe29bc5 SHA256 2761ca7812591751c2e9ea615182a1f2ba8d9812a1903ac13b67aeca21868432
+DIST enigmail-0.95.6-ja-JP.xpi 34024 RMD160 2da46a0f27110e6b8519b8a17850fe0e1aa757cf SHA1 ae3a5a50cf3fa13a629c1f13788a89822f08eae4 SHA256 8af4bedc0f94c48053b24d64381b0a8323f01c3da283f057d05e5c7e6029e359
+DIST enigmail-0.95.6-ko-KR.xpi 33683 RMD160 53157cecc20ca0d47716d32f8ecfb6af9cb09781 SHA1 7b0df520ca5168a1a304d5502a6274ef86ed16cc SHA256 680321c7d04651a0f7f9edd6d2a7e4d31a80be7c4dcf53a9e42fd90558781afc
+DIST enigmail-0.95.6-nb-NO.xpi 29634 RMD160 297ea983b4272b0435be36cb15e80aab05676807 SHA1 13acd543af381b1cd250c757ed68f88f4a1f68e3 SHA256 eab131a7ecb6fd70214e971002bb3437c1329a51bec1576f2a2b55e2829b5376
+DIST enigmail-0.95.6-pl-PL.xpi 31811 RMD160 d3cbe067173bd95ed2985b9c844dc3316a29862c SHA1 48ff0b0952d8d761521ed55fb159ea04547532e5 SHA256 c7ea658e75548643ee5b60a7d54c94788e3ea24e98b850b947fda17a7c70c6b3
+DIST enigmail-0.95.6-pt-BR.xpi 32891 RMD160 03f9661f6b0ddc3550313180171483a4ee35dd66 SHA1 b8c60014cec1042bdfd5d12acf7d3a7ecd7bd37d SHA256 c1ac0d55859bd6caa9982e14e8ec635365783e5cc106e96fc873ecd295a4771f
+DIST enigmail-0.95.6-pt-PT.xpi 31702 RMD160 dde72992f27c5a373dbf336c794173a07b0f2ba9 SHA1 d8bbeb7c84c10df6785ecd9bf5594246b45b0e3a SHA256 8886ad0f82b9eaab8504de52a0c33292955fc8f0a602e5facd7d16a02a41c57d
+DIST enigmail-0.95.6-ro-RO.xpi 30984 RMD160 0a912798b433e6917d0ef7ea361440ab426bfceb SHA1 3c6cf19fce48366e0f039ade18cadb35c0cc6473 SHA256 10d5128f09e07df9e5c30c9c74318594853359b8578ba2e000327c6c6bae5893
+DIST enigmail-0.95.6-ru-RU.xpi 34504 RMD160 a12e26c7a2976dbd22234b9ca75d01a83e2b43b3 SHA1 ccd547b2e027e3ca87b6bf50d74e01b56a1c4468 SHA256 9f8f6d5e6a42c0b4c0f518ed481c4163a92aa8ea43e5287f5e6813604b1e3340
+DIST enigmail-0.95.6-sl-SI.xpi 35703 RMD160 fee4fd189dbc8da57b75e10bc91b0c0bbfd7cba0 SHA1 976f9bc4ed0162bc7a73453fb654d14c3feac4f7 SHA256 f2b129ef86502e4f69098c800ba299555c02288def9492d29f4a2699530382bf
+DIST enigmail-0.95.6-sv-SE.xpi 31284 RMD160 bc8d6ebaf8e6d3b10024c054e6fb0e67a37eb6b0 SHA1 cf0c77abe48730cbddf650afa3407cd90b1c7d97 SHA256 95e5f918763d7f87b3b2d8d4ddf6427c1f6090e83ce905ae2b24aea88394294d
+DIST enigmail-0.95.6-tr-TR.xpi 30638 RMD160 44110bbb7b4e30ebfe05e0c798337a7a139f8860 SHA1 67b7b83f0c800cbf7ece740b4496ccaf760f60ec SHA256 e2d6769c830e0604cd3b7996f627de09995f25d4c8843bb023c88ca78e29ae94
+DIST enigmail-0.95.6-zh-CN.xpi 31621 RMD160 3adf067c27060706b0b5649b2bd0cda9bbbf3f54 SHA1 657e4353cadf1760438b0b3b956288cb08b93c60 SHA256 f73339e2e9edd9f447b8101885c78b5f19ad7d3f4e52121f0141ecbf63b14412
+DIST enigmail-0.95.6-zh-TW.xpi 31721 RMD160 dfe5c6cc8162fc361c075b8e5c70fced41e3880f SHA1 034f5ac8312e5cbf4b977fa817e4aec93243a9b3 SHA256 d3ee112972b4e7788d34841121fadc0083d5e50fc14ce8e1355b765fa8aaaf42
+DIST enigmail-0.95.6.tar.gz 1183899 RMD160 1ac4f3946f1371633b4c89692fd9c62adb0de4e3 SHA1 47259c22b5aa67ff73556eb0b269409eb064be37 SHA256 08d77f64ae8f240530e1c448427725ac5baa6e7465dffd1fec8e52298862d5f9
 DIST enigmail-ca-AD-0.9x.xpi 29484 RMD160 a338ad40279f43e13f0ae47b27719357806f56b8 SHA1 3022dd94cfd0c01b506195e276f5b5dfaf5cb7f5 SHA256 d3a5af60286e90c777a7473e9432db727a9349ae1b7d4670803b605e9c4ad405
 DIST enigmail-cs-CZ-0.9x.xpi 31992 RMD160 2aeb8484ed927c87e782548f8414dc6e4b246ae0 SHA1 81fc33ff0a1bf54acefbf335081d3435d45cee72 SHA256 3184737a5761b6fd136cd6bf903cd3c383194608b5ebc45f217734143eefa280
 DIST enigmail-de-0.9x.xpi 31569 RMD160 bcbe0a8adc3f024ddd0cda0d3adffc6831b55b87 SHA1 dc443a89903bd2aa61e41e7dd3023b42bbbf8ddc SHA256 15f542325dc1ed0fcce8424f2dbd04efeefabfa193116c8ba26511c42818d3da
@@ -85,10 +108,14 @@ EBUILD enigmail-0.95.5-r1.ebuild 5682 RMD160 b62196773ed787f1a2d933aa5278a48906f
 MD5 c15d92b0b0b6a3707754c0f19df04177 enigmail-0.95.5-r1.ebuild 5682
 RMD160 b62196773ed787f1a2d933aa5278a48906f8d464 enigmail-0.95.5-r1.ebuild 5682
 SHA256 9e7c3c5128162a8c8ce534678e53db1d6ebc4e99b9f72c5ad463088148a9f945 enigmail-0.95.5-r1.ebuild 5682
-MISC ChangeLog 15609 RMD160 97903503bc95e587b74dd65ad9d424cc41941b33 SHA1 bfb11321a8f90ce369058988d363ce9a693db4e1 SHA256 02cc8e80ea216c030eedd9cc5ee10b6356de8d74b4877cfb4dd385df5bb26545
-MD5 8daa6ba6f5ebdfe16e343ce10f163c25 ChangeLog 15609
-RMD160 97903503bc95e587b74dd65ad9d424cc41941b33 ChangeLog 15609
-SHA256 02cc8e80ea216c030eedd9cc5ee10b6356de8d74b4877cfb4dd385df5bb26545 ChangeLog 15609
+EBUILD enigmail-0.95.6.ebuild 5700 RMD160 5af2f4931572d02e50af1ab00151e13f5c0bb532 SHA1 ead6041564bcd179298a8373dbf504f84949f34a SHA256 65458d4202c689a9867abf11ec21a609203b45107b711cc3795f59ca0f697188
+MD5 86fa860a4c32dc740cf507305bd6a700 enigmail-0.95.6.ebuild 5700
+RMD160 5af2f4931572d02e50af1ab00151e13f5c0bb532 enigmail-0.95.6.ebuild 5700
+SHA256 65458d4202c689a9867abf11ec21a609203b45107b711cc3795f59ca0f697188 enigmail-0.95.6.ebuild 5700
+MISC ChangeLog 15731 RMD160 8154e47a4a57ee9e289ee4053891bf2fa62bccc4 SHA1 93e882c1dfb42bbfd71c4b02bba805e796ce0ba2 SHA256 7387d88b2cb579a5ba265917bb3b0553b9ec93de7a99ab9d2c14d52a9d5f102c
+MD5 2de5147d0363092b7cc7da4635fdf747 ChangeLog 15731
+RMD160 8154e47a4a57ee9e289ee4053891bf2fa62bccc4 ChangeLog 15731
+SHA256 7387d88b2cb579a5ba265917bb3b0553b9ec93de7a99ab9d2c14d52a9d5f102c ChangeLog 15731
 MISC metadata.xml 238 RMD160 20be188d400f8ae54fb1eae8bfb243c43eed2395 SHA1 fb7dacf03f1ce8294d6d2f07d4c2d7ff69ee7525 SHA256 ef51e99b6b1ccee48a71906e90a4111f58793292fe1248934a811fcb02506036
 MD5 22a1feabf45dadbfa2268b7fff3ce66e metadata.xml 238
 RMD160 20be188d400f8ae54fb1eae8bfb243c43eed2395 metadata.xml 238
@@ -102,3 +129,6 @@ SHA256 2625498be118cc8964ed0f44f368ad751e8f83b64a8962171aaf8d6175ce9ff4 files/di
 MD5 ee2d010646777a5ad3217f90f4b3697b files/digest-enigmail-0.95.5-r1 5900
 RMD160 27b87f112922a76696def4b0b71537fe9c6fa764 files/digest-enigmail-0.95.5-r1 5900
 SHA256 ee8ecabd3d5b14e550860da9b8fdf4cbb3de48f279f67e504c33fd799c61f6ff files/digest-enigmail-0.95.5-r1 5900
+MD5 030d8e443f1b736f876d64512ad1fed1 files/digest-enigmail-0.95.6 6406
+RMD160 a8e87bfd961c05d3eb762f117a87dfae69aa9800 files/digest-enigmail-0.95.6 6406
+SHA256 7a85e7962b2ac6c381732c760076476177d68d56de84762f7265a61a12c90b88 files/digest-enigmail-0.95.6 6406
