@@ -1,0 +1,75 @@
+MD5 81b64164c89ba771886f1e2c0d8d7044 enigmail-0.95.6-ca-AD.xpi 30605
+RMD160 6827573391899f49f03e895b02292dbec0f598cd enigmail-0.95.6-ca-AD.xpi 30605
+SHA256 68c7c716478e2dd9e64dff7bd3b209417665c7dbe12146bc9284880806869721 enigmail-0.95.6-ca-AD.xpi 30605
+MD5 c2ae13362d8cc4937c8cefbce6d46cca enigmail-0.95.6-cs-CZ.xpi 33358
+RMD160 30970684d12663138ddde7cb8ee038ca67ebc161 enigmail-0.95.6-cs-CZ.xpi 33358
+SHA256 88ef26d77005b5517912edb3aa0fefa49e7145ffc979e6ba13ecc755b48ffc2a enigmail-0.95.6-cs-CZ.xpi 33358
+MD5 7b363f97e6873f44c835735a7b02620f enigmail-0.95.6-de.xpi 31707
+RMD160 45a89393badcb0453984f050b57d5172330b874a enigmail-0.95.6-de.xpi 31707
+SHA256 16358d6d651640acfbd110b1c3dd8c6f764c90b5bac24d952f99d9eda9c6a9f7 enigmail-0.95.6-de.xpi 31707
+MD5 50012270b6b99f7e42e82256ac9212e3 enigmail-0.95.6-el.xpi 38899
+RMD160 c3d90eb73a078a827b1fb180d47e7e3e92de8d50 enigmail-0.95.6-el.xpi 38899
+SHA256 df694f3c2045cb847f1938a483d0c74b223eca80755146cd1dd2aafd67f08327 enigmail-0.95.6-el.xpi 38899
+MD5 b4600f86bce0ab816bb2896a936eecaa enigmail-0.95.6-es-ES.xpi 29637
+RMD160 602183e597a6d6924e079c468d93d6e7ee328d40 enigmail-0.95.6-es-ES.xpi 29637
+SHA256 8537f7a3ab14b53733e0be89661938a0faff468aa1f1eed14e49f9e7feab25ed enigmail-0.95.6-es-ES.xpi 29637
+MD5 211edad36a919e0000e4fcf63a1c15c4 enigmail-0.95.6-fi-FI.xpi 30081
+RMD160 f06aebc55d6d4481c70e0fbba3d7f3c809bea2f9 enigmail-0.95.6-fi-FI.xpi 30081
+SHA256 618fd0b74406ff3ac625f99cb3dbca1d4a347b2d36fcb0f3ccf7070387681cb2 enigmail-0.95.6-fi-FI.xpi 30081
+MD5 8f4c3c346cdaa6b8f9a698625bd598c6 enigmail-0.95.6-fr-FR.xpi 32665
+RMD160 d78200280157af1de58ac02981a10b82af34f1ce enigmail-0.95.6-fr-FR.xpi 32665
+SHA256 55ee6357e52ae111b5ad8a0587f34a93c5b97d7f7b1443bccb195e9e8b88d417 enigmail-0.95.6-fr-FR.xpi 32665
+MD5 7fa17bd0edb7293765c781844f299852 enigmail-0.95.6-hu-HU.xpi 33707
+RMD160 2459f373e0a6af92896ea5ae82079e7a0391ef6a enigmail-0.95.6-hu-HU.xpi 33707
+SHA256 42aa4c8b3e77f0c211c8b4f83299f57ed1c4132b914acdbc2da74969405884fc enigmail-0.95.6-hu-HU.xpi 33707
+MD5 613bba3e4d5586b8d02fe6882e0066f1 enigmail-0.95.6-it-IT.xpi 31757
+RMD160 936c1747da644bbace844cbf7fe462c6de9d2275 enigmail-0.95.6-it-IT.xpi 31757
+SHA256 2761ca7812591751c2e9ea615182a1f2ba8d9812a1903ac13b67aeca21868432 enigmail-0.95.6-it-IT.xpi 31757
+MD5 5923ab0183e1d68a854bd210ad51ba5d enigmail-0.95.6-ja-JP.xpi 34024
+RMD160 2da46a0f27110e6b8519b8a17850fe0e1aa757cf enigmail-0.95.6-ja-JP.xpi 34024
+SHA256 8af4bedc0f94c48053b24d64381b0a8323f01c3da283f057d05e5c7e6029e359 enigmail-0.95.6-ja-JP.xpi 34024
+MD5 cb28cfbc72acdbca411a5f8d8637530d enigmail-0.95.6-ko-KR.xpi 33683
+RMD160 53157cecc20ca0d47716d32f8ecfb6af9cb09781 enigmail-0.95.6-ko-KR.xpi 33683
+SHA256 680321c7d04651a0f7f9edd6d2a7e4d31a80be7c4dcf53a9e42fd90558781afc enigmail-0.95.6-ko-KR.xpi 33683
+MD5 ba4b294dbe84dae1534ef5d3856420a7 enigmail-0.95.6-nb-NO.xpi 29634
+RMD160 297ea983b4272b0435be36cb15e80aab05676807 enigmail-0.95.6-nb-NO.xpi 29634
+SHA256 eab131a7ecb6fd70214e971002bb3437c1329a51bec1576f2a2b55e2829b5376 enigmail-0.95.6-nb-NO.xpi 29634
+MD5 3ac349c7b6a1ebbd80f11c8911f5102d enigmail-0.95.6-pl-PL.xpi 31811
+RMD160 d3cbe067173bd95ed2985b9c844dc3316a29862c enigmail-0.95.6-pl-PL.xpi 31811
+SHA256 c7ea658e75548643ee5b60a7d54c94788e3ea24e98b850b947fda17a7c70c6b3 enigmail-0.95.6-pl-PL.xpi 31811
+MD5 880eb30ed936c91a82f7ea3b51a5182f enigmail-0.95.6-pt-BR.xpi 32891
+RMD160 03f9661f6b0ddc3550313180171483a4ee35dd66 enigmail-0.95.6-pt-BR.xpi 32891
+SHA256 c1ac0d55859bd6caa9982e14e8ec635365783e5cc106e96fc873ecd295a4771f enigmail-0.95.6-pt-BR.xpi 32891
+MD5 e60fd48e6bc90c6d5deb7f26e31f7dda enigmail-0.95.6-pt-PT.xpi 31702
+RMD160 dde72992f27c5a373dbf336c794173a07b0f2ba9 enigmail-0.95.6-pt-PT.xpi 31702
+SHA256 8886ad0f82b9eaab8504de52a0c33292955fc8f0a602e5facd7d16a02a41c57d enigmail-0.95.6-pt-PT.xpi 31702
+MD5 b5e944c3f3f64e991c54315ca62d004f enigmail-0.95.6-ro-RO.xpi 30984
+RMD160 0a912798b433e6917d0ef7ea361440ab426bfceb enigmail-0.95.6-ro-RO.xpi 30984
+SHA256 10d5128f09e07df9e5c30c9c74318594853359b8578ba2e000327c6c6bae5893 enigmail-0.95.6-ro-RO.xpi 30984
+MD5 323d5e3192772ca48671d74518899bc7 enigmail-0.95.6-ru-RU.xpi 34504
+RMD160 a12e26c7a2976dbd22234b9ca75d01a83e2b43b3 enigmail-0.95.6-ru-RU.xpi 34504
+SHA256 9f8f6d5e6a42c0b4c0f518ed481c4163a92aa8ea43e5287f5e6813604b1e3340 enigmail-0.95.6-ru-RU.xpi 34504
+MD5 6630590efb6f04f0763f7d36750c0548 enigmail-0.95.6-sl-SI.xpi 35703
+RMD160 fee4fd189dbc8da57b75e10bc91b0c0bbfd7cba0 enigmail-0.95.6-sl-SI.xpi 35703
+SHA256 f2b129ef86502e4f69098c800ba299555c02288def9492d29f4a2699530382bf enigmail-0.95.6-sl-SI.xpi 35703
+MD5 237d8d4cef7a5a5bb2ec99c08cdc1c95 enigmail-0.95.6-sv-SE.xpi 31284
+RMD160 bc8d6ebaf8e6d3b10024c054e6fb0e67a37eb6b0 enigmail-0.95.6-sv-SE.xpi 31284
+SHA256 95e5f918763d7f87b3b2d8d4ddf6427c1f6090e83ce905ae2b24aea88394294d enigmail-0.95.6-sv-SE.xpi 31284
+MD5 cf508c2cabae10c036b52cfa30aaca81 enigmail-0.95.6-tr-TR.xpi 30638
+RMD160 44110bbb7b4e30ebfe05e0c798337a7a139f8860 enigmail-0.95.6-tr-TR.xpi 30638
+SHA256 e2d6769c830e0604cd3b7996f627de09995f25d4c8843bb023c88ca78e29ae94 enigmail-0.95.6-tr-TR.xpi 30638
+MD5 bb3128863a1581a9e1d88a592f508dbc enigmail-0.95.6-zh-CN.xpi 31621
+RMD160 3adf067c27060706b0b5649b2bd0cda9bbbf3f54 enigmail-0.95.6-zh-CN.xpi 31621
+SHA256 f73339e2e9edd9f447b8101885c78b5f19ad7d3f4e52121f0141ecbf63b14412 enigmail-0.95.6-zh-CN.xpi 31621
+MD5 259024727b00d54430ac7b54d3c9b32b enigmail-0.95.6-zh-TW.xpi 31721
+RMD160 dfe5c6cc8162fc361c075b8e5c70fced41e3880f enigmail-0.95.6-zh-TW.xpi 31721
+SHA256 d3ee112972b4e7788d34841121fadc0083d5e50fc14ce8e1355b765fa8aaaf42 enigmail-0.95.6-zh-TW.xpi 31721
+MD5 cfbe6ff77f80a349b396829757ad952a enigmail-0.95.6.tar.gz 1183899
+RMD160 1ac4f3946f1371633b4c89692fd9c62adb0de4e3 enigmail-0.95.6.tar.gz 1183899
+SHA256 08d77f64ae8f240530e1c448427725ac5baa6e7465dffd1fec8e52298862d5f9 enigmail-0.95.6.tar.gz 1183899
+MD5 36837ad5c7910af353cf65582c2f0d13 mozilla-thunderbird-2.0.0.9-patches-0.1.tar.bz2 29252
+RMD160 ad95c79d7c1eeca15fc097a6de66212bd631b34c mozilla-thunderbird-2.0.0.9-patches-0.1.tar.bz2 29252
+SHA256 997b11e697c350f36d4ef7dddb4d66ad233328053a01a54339e9207ce1bdb40f mozilla-thunderbird-2.0.0.9-patches-0.1.tar.bz2 29252
+MD5 a6dd74f87dafc7516e7970ecefee046b thunderbird-2.0.0.9-source.tar.bz2 37562994
+RMD160 0a7e3aeb76b4ef6c84634b2935e84f56dc859051 thunderbird-2.0.0.9-source.tar.bz2 37562994
+SHA256 bff4078379abd8616811e06f848aaaebd2cf39b7ae70c1434377c2aaaa6fec80 thunderbird-2.0.0.9-source.tar.bz2 37562994
